--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -18,6 +18,11 @@
       <li class="nav-item">
         <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Periferija</a>
       </li>
+      <ng-container *ngIf="accountService.currentUser$ | async">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/orders" routerLinkActive="active">Vaše narudžbe</a>
+        </li>
+      </ng-container>
     </ul>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item" ngbDropdown>
@@ -53,14 +58,12 @@
             <button type="submit" class="btn btn-outline-dark btn-block">Prijavi se</button>
           </form>
           <div class="dropdown-divider"></div>
-          <button ngbDropdownItem>Novi ste korisnik? Registrirajte se</button>
+          <button ngbDropdownItem>Novi ste korisnik? <a routerLink="/register">Registrirajte se</a></button>
           <button ngbDropdownItem>Zaboravili ste lozinku?</button>
         </div>
         <div ngbDropdownMenu aria-labelledby="navbarDropdown1" class="dropdown-menu" *ngIf="accountService.currentUser$ | async">
           <ul>
             <li>
-              <button ngbDropdownItem>Action - 1</button>
-              <button ngbDropdownItem>Another Action</button>
               <button ngbDropdownItem (click)="logout()">Odjavi se</button>
             </li>
           </ul>
