--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -18,6 +18,9 @@
       <li class="nav-item">
         <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Periferija</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink='/errors' routerLinkActive='active'>Errors</a>
+      </li>
       <ng-container *ngIf="accountService.currentUser$ | async">
         <li class="nav-item">
           <a class="nav-link" routerLink="/orders" routerLinkActive="active">Vaše narudžbe</a>
