Added Photo table and product ui skeleton

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,3 +1,3 @@
 <ul>
-    <li *ngFor="let product of products">{{product.Id}}-{{product.Name}}-{{product.Description}}-{{product.Price}}</li>
+    <li *ngFor="let product of products">{{product.id}}-{{product.name}}-{{product.description}}-{{product.price}}</li>
 </ul>
