--- a/client/src/app/products/product-card/product-card.component.html
+++ b/client/src/app/products/product-card/product-card.component.html
@@ -1,6 +1,6 @@
 <div class="card">    
 <div class="view overlay">
-<img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg" alt="Card image cap" routerLink="/product/{{product.id}}">
+<img class="card-img-top" src="{{product.photoUrl}}" alt="Card image cap" routerLink="/product/{{product.id}}">
 <a href="#!">
 <div class="mask rgba-white-slight"></div>
 </a>
