--- a/client/src/app/products/product-detail/product-detail.component.html
+++ b/client/src/app/products/product-detail/product-detail.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="product" class="row">
     <div class="col-xs-12 col-md-6">
         <h1>{{product.name}}</h1>
-        <img src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg" alt="">
+        <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"></ngx-gallery>
     </div>
     <div class="col-xs-12 col-md-6">
         <h3>{{product.name}}</h3>
