--- a/client/src/app/products/product-card/product-card.component.css
+++ b/client/src/app/products/product-card/product-card.component.css
@@ -1,9 +1,11 @@
 .card{
     margin: 5% 0%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 .card-body{
   margin: 0% 0% 0% 3%;
   padding: 6% 0%;
 }
-  
-  
+
