--- a/client/src/app/products/product-list/product-list.component.html
+++ b/client/src/app/products/product-list/product-list.component.html
@@ -1,7 +1,16 @@
 <div class="flex-container">
     <div class="row">
-            <div *ngFor="let product of Products" class="col-xs-12 col-sm-6 col-md-4 col-lg-2 mb-4">
+            <div *ngFor="let product of products" class="col-xs-12 col-sm-6 col-md-4 col-lg-2 mb-4">
                 <app-product-card [product]="product"></app-product-card>
             </div>
+    </div>
+    <div class="d-fex justify-content-center" *ngIf="pagination">
+        <ngb-pagination    
+            [pageSize]="pagination.itemsPerPage"
+            [collectionSize]="pagination.totalItems"
+            [(page)]="pagination.currentPage"
+            (pageChange)="pageChanged($event)"
+            [directionLinks]="false">
+        </ngb-pagination>
     </div>
 </div>
