--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -7,15 +7,6 @@
   <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/" (click)="isMenuCollapsed = true">Početna stranica</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Računala</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Komponente</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" routerLink="/shop" (click)="isMenuCollapsed = true">Shop</a>
       </li>
       <li class="nav-item">
@@ -76,7 +67,7 @@
         </div>
       </li>
       <li class="nav-item">  
-      <a href="#" class="nav-link active"><i class="fa fa-shopping-cart fa-lg mr-sm-2"></i><span class="d-none d-md-inline-block">Košarica</span></a>
+      <a routerLink="/basket" class="nav-link active"><i class="fa fa-shopping-cart fa-lg mr-sm-2"></i><span class="d-none d-md-inline-block">Košarica</span></a>
       </li>   
     </ul>
   </div>
