--- a/client/src/app/products/product-detail/product-detail.component.html
+++ b/client/src/app/products/product-detail/product-detail.component.html
@@ -7,7 +7,7 @@
         <h3>{{product.name}}</h3>
         <p>{{product.description}}</p>
         <h1>{{product.price}} kn</h1>
-        <button class="btn btn-primary">Dodaj u košaricu</button>
+        <button (click)="addtocart()"  class="btn btn-primary">Dodaj u košaricu</button>
         <button class="btn btn-danger" routerLink="/product/{{product.id}}/editphoto">Uredi</button>
     </div>
 </div>
