--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -3,12 +3,9 @@
   <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
     &#9776;
   </button>
-  <a class="navbar-brand" [routerLink]="'.'">Web shop</a>
+  <a class="navbar-brand" [routerLink]="'/shop'">Web shop</a>
   <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/shop" (click)="isMenuCollapsed = true">Shop</a>
-      </li>
     <ng-container *ngIf="accountService.currentUser$ | async">
       <li class="nav-item">
         <a *appHasRole='["Admin","Moderator"]' class="nav-link" routerLink="/addnew" (click)="isMenuCollapsed = true">Dodaj proizvod</a>
@@ -17,7 +14,10 @@
         <a *appHasRole='["Admin","Moderator"]' class="nav-link" routerLink='/errors' routerLinkActive='active'>Errors</a>
       </li>      
       <li class="nav-item">
-        <a class="nav-link" routerLink="/orders" routerLinkActive="active">Vaše narudžbe</a>
+        <a *appHasRole='["Admin","Moderator"]' class="nav-link" routerLink="/orders" routerLinkActive="active">Sve narudžbe</a>
+      </li>
+      <li class="nav-item">
+        <a *appHasRole='["Member"]' class="nav-link" routerLink="/userorders" routerLinkActive="active">Vaše narudžbe</a>
       </li>
       </ng-container>
     </ul>
