--- a/client/src/app/basket/basket.component.html
+++ b/client/src/app/basket/basket.component.html
@@ -1,15 +1,45 @@
-<ul *ngIf="cart?.length>0">
-    <li *ngFor="let product of cart,let i = index" class="mb-3">               
-        {{i}}-----{{product.id}}-{{product.name}}-{{product.description}}-{{product.price}}
-        <ng-container *ngIf="(accountService.currentUser$ | async)">
-            <button (click)="buyItems(i)" type="button" class="btn btn-primary mr-3">Kupi</button>   
-        </ng-container>
-        <ng-container *ngIf="(accountService.currentUser$ | async) === null">
-            <button (click)="notLoggedIn()"  type="button" class="btn btn-primary mr-3">Kupi</button>
-        </ng-container>
-        <button (click)="removeItem(i)" type="button" class="btn btn-primary">Izbriši</button>
-    </li>
-</ul>
-
-<p *ngIf="cart?.length<1">Nemate proizvoda na listi želja</p>
-
+<div class="row justify-content-center">
+<div class="col-auto">
+<div class="table table-responsive" *ngIf="cart?.length>0">
+    <tr>
+    <th scope="col">
+        <div class="p-2 px-3 text-uppercase">Proizvod</div>
+    </th>
+    <th scope="col">
+        <div class="p-2 px-3 text-uppercase">Cijena</div>
+    </th>
+    <th scope="col">
+        <div class="py-2 text-uppercase">Opcije</div>
+    </th>
+        <th *ngIf="isBasket" scope="col" class="border-0">
+            <div class="py-2 text-uppercase">Remove</div>
+        </th>
+    </tr>
+    <tbody>
+        <tr *ngFor="let item of cart; let i = index">
+            <th scope="row">
+                <div class="p-2">
+                    <img src="{{item.photoUrl}}" alt="{{item.name}}" class="img-fluid" style="max-height:50px;">
+                    <div class="ml-3 d-inline-block align-middle">
+                        <h5 class="mb-0">
+                            <a routerLink="/product/{{item.id}}" class="text-dark">{{item.name}}</a>
+                        </h5>                           
+                    </div>
+                </div>
+            </th>
+            <td class="align-middle"><strong>{{item.price}} kn</strong></td>
+            <td class="align-middle text-center">
+                <ng-container *ngIf="(accountService.currentUser$ | async)">
+                    <button (click)="buyItems(i)" type="button" class="btn btn-primary mr-3">Kupi</button>   
+                </ng-container>
+                <ng-container *ngIf="(accountService.currentUser$ | async) === null">
+                    <button (click)="notLoggedIn()"  type="button" class="btn btn-primary mr-3">Kupi</button>
+                </ng-container>
+                <button (click)="removeItem(i)" type="button" class="btn btn-primary">Izbriši</button>
+            </td>
+        </tr>
+    </tbody>
+</div>
+<p *ngIf="cart?.length<1">Nemate proizvoda u košarici</p>
+</div>
+</div>
